--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -18,10 +18,10 @@
 <p></p>
 
 <div class="images">
-    <a href="over_mij.html" target="_blank"><img src="windows.png" alt="windows"></a>
-    <a href="galgje.php" target="_blank"><img src="windows.png" alt="windows"></a>
-    <a href="rock_paper_schaar/index.html" target="_blank"><img src="windows.png" alt="windows"></a>
-    <a href="over_mij.html" target="_blank"><img src="windows.png" alt="windows"></a>
+    <a href="over_mij.html" target="_blank"><img src="img/profiel.png" alt="windows"></a>
+    <a href="galgje/galgje.php" target="_blank"><img src="img/hangman.png" alt="windows"></a>
+    <a href="rock_paper_schaar/index.html" target="_blank"><img src="img/steen-papier-schaar-.jpg" alt="windows"></a>
+    <a href="Jarvis-Gehacked-7bdf2bde-2c73f4e4/index.html" target="_blank"><img src="img/bit_academy.jpg" alt="windows"></a>
 </div>
 
 <div class="buttons">
