--- a/dashboard/over_mij.html
+++ b/dashboard/over_mij.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Even voorstellen</h1>
     <div class="border">
-        <p>Mijn naam is Bruno Dijkhuis. Ik zit op het Horizon College in Alkmaar. Mijn hobby's zijn afspreken met vrienden en saxofoon spelen. Ik heb een broer van 23 en een hond.</p>
+        <p>Mijn naam is henk. Ik zit op het Horizon College in Heerhugowaard. Mijn hobby's zijn afspreken met vrienden en saxofoon spelen. Ik heb een broer van 19 en een hond.</p>
     </div>
 </body>
 </html>
